# wtf-chatapp

./: .gitignore  README.md  config.default.toml  package.json  pnpm-lock.yaml  schema.sql  tailwind.config.cjs
server/: config.py  main.py  pyproject.toml
src/components/: Navbar.svelte
src/lib/: messages.d.ts  test.ts
src/routes/: index.svelte
