[project]
name = ""
version = ""
description = ""
authors = [
    {name = "CutieRei", email = "cutierei.py@gmail.com"},
]
dependencies = [
    "fastapi>=0.79.0",
    "uvicorn>=0.18.2",
    "websockets>=10.3",
    "fastapi-socketio>=0.0.9",
]
requires-python = ">=3.10"
license = {text = "WTFPL"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
