[project]
name = ""
version = ""
description = ""
authors = [
    {name = "CutieRei", email = "cutierei.py@gmail.com"},
]
dependencies = [
    "fastapi==0.79.0",
    "uvicorn==0.18.2",
    "websockets==10.3",
    "fastapi-socketio==0.0.9",
    "asyncpg==0.26.0",
]
requires-python = ">=3.10"
license = {text = "WTFPL"}
[project.optional-dependencies]

[tool.pdm]

[tool.pdm.scripts]
dev = "uvicorn main:app --port 5174 --host 0.0.0.0 --reload"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
